custom.css
:root {
    --accent-bg: #fff;
    --accent: gray;
}

body > header {
  background: var(--accent-bg);
  border-bottom: 1px solid var(--border);
  text-align: center;
  padding: 0 0 0 0;
  grid-column: 1 / -1;
}

body > header h3 {
    font-weight: 300;
    max-width: 1000px;
    margin: 1rem auto;
}

body > header p {
  max-width: 40rem;
  margin: 1rem auto;
}

header > nav {
    font-size: 1rem;
    line-height: 2;
    padding: 1rem 0 0 0;
}

header > nav ul,
header > nav ol {
    align-content: space-around;
    align-items: center;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    list-style-type: none;
    margin: 0;
    padding: 0;
}
 
header > nav ul li,
header > nav ol li {
  display: inline-block;
}

header > nav a,
header > nav a:visited {
  margin: 0 0.5rem 1rem 0.5rem;
  border: 0px;
  color: var(--text);
  display: inline-block;
  padding: 0.5rem 1rem;
  text-decoration: none;
}

header > nav a:hover {
    filter: brightness(1.4);
    cursor: pointer;
}

/* Reduce nav side on mobile */
@media only screen and (max-width: 720px) {
  header > nav a {
    border: none;
    padding: 0;
    text-decoration: none;
    line-height: 1;
  }
}

nav > a {
    font-weight: 100;
    text-decoration: none;
}

h4 {
    text-align: center;
    color: #999999;
    font-weight: 200;
}

hr {
    margin: -0.5rem auto;
}

